Added dmac example

--- a/examples/examples.toml
+++ b/examples/examples.toml
@@ -1,3 +1,6 @@
 # Config file used by `manage` to distribute examples to the BSPs
 [examples.blinky_basic]
 boards = ["feather_m4", "metro_m4"]
+
+[examples.async_dmac]
+boards = ["metro_m4"]
